--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/HebelzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/HebelzylinderRout.cshtml
@@ -47,7 +47,7 @@
                     @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
 
                 </div>
-                <input type="submit" class="btn btn-success" value="Create Hebelzylinder" />
+                <input type="submit" class="btn btn-success" id="input" value="Create Hebelzylinder" />
                 <hr />
             }
         </div>
