--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
@@ -26,11 +26,13 @@
                         },
                          new { @class = " form-select", @id = "select" })
                 
-               <div id="createColum">
+                 <div id="createColum">
 
                     <label>Name</label>
-
                     @Html.EditorFor(m => m.Name, new { htmlAttributes = new { @class = "form-control" } })
+
+                    <label>Cost</label>
+                    @Html.EditorFor(m => m.Cost, new { htmlAttributes = new { @class = "form-control" } })
 
                     <label> Artikelnummer</label>
                     @Html.EditorFor(m => m.Artikelnummer, new { htmlAttributes = new { @class = "form-control" } })
@@ -44,6 +46,7 @@
                     <span asp-validation-for="ImageFile"  class="text-danger"></span>
                
                     @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+
                </div>
                 <input type="submit" class="btn btn-success" id="input" value="Create Aussenzylinder \ Rundzylinder" />
                 <hr />
@@ -59,6 +62,7 @@
                 <tr>
                     <th>Name</th>
                     <th>Image</th>
+                    <th>Cost</th>
                     <th>Artikelnummer</th>
                     <th>Edit</th>
                     <th>Options</th>
@@ -69,6 +73,7 @@
                     <tr>
                         <td id="rowTable" class="table-info">@item.Name</td>
                         <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
+                        <td id="rowTable" class="table-info">@item.Cost</td>
                         <td id="rowTable" class="table-info">@item.Artikelnummer</td>
                         <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Aussenzylinder_Rundzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
                         <td id="rowTable" class="table-info">
