--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Edit_Aussenzylinder_Rundzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Edit_Aussenzylinder_Rundzylinder.cshtml
@@ -26,6 +26,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Cost" class="control-label"></label>
+                <input asp-for="Cost" class="form-control" />
+                <span asp-validation-for="Cost" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Artikelnummer" class="control-label"></label>
                 <input asp-for="Artikelnummer" class="form-control" />
                 <span asp-validation-for="Artikelnummer" class="text-danger"></span>
