--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model schliessanlagen_konfigurator.Models.Profil_Doppelzylinder;  
+﻿@model schliessanlagen_konfigurator.Models.Profil_Doppelzylinder;
 @{
     ViewData["Title"] = "Profil Doppelzylinder";
 }
@@ -14,57 +14,57 @@
                 <button class="btn btn-info"><a href="@Url.Action("Aussenzylinder_RundzylinderRout","Home")">Aussenzylinder / Rundzylinder</a></button>
             </div>
         </div>
-      
-         <div>
+
+        <div>
             <h2>New Profil Doppelzylinder</h2>
             @using (Html.BeginForm("Create_Profil_Doppelzylinder", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
             {
                 <label>Zylinder Typen</label>
 
                 @Html.DropDownListFor(model => model.schliessanlagenId,
-                        new List<SelectListItem> {
-                        new SelectListItem {  Value = "9",Text="Profil-Doppelzylinder" }
-                        },
-                new { @class = "form-select", @id = "select" })
+                         new List<SelectListItem> {
+            new SelectListItem {  Value = "9",Text="Profil-Doppelzylinder" }
+            },
+                         new { @class = "form-select", @id = "select" })
                 <div id="createColum">
 
                     <label>Name</label>
                     @Html.EditorFor(m => m.Name, new { htmlAttributes = new { @class = "form-control" } })
 
-                     <label> Artikelnummer</label>
+                    <label> Artikelnummer</label>
                     @Html.EditorFor(m => m.Artikelnummer, new { htmlAttributes = new { @class = "form-control" } })
-             
+
                     <label>Extern</label>
                     @Html.EditorFor(m => m.Extern, new { htmlAttributes = new { @class = "form-control" } })
-               
+
                     <label>Intern</label>
                     @Html.EditorFor(m => m.Intern, new { htmlAttributes = new { @class = "form-control" } })
-              
+
                     <label>Count</label>
                     @Html.EditorFor(m => m.Count, new { htmlAttributes = new { @class = "form-control" } })
                     <label>Min</label>
                     @Html.EditorFor(m => m.min, new { htmlAttributes = new { @class = "form-control" } })
-               
+
                     <label>Max</label>
                     @Html.EditorFor(m => m.max, new { htmlAttributes = new { @class = "form-control" } })
 
                     <label>Cost</label>
                     @Html.EditorFor(m => m.Cost, new { htmlAttributes = new { @class = "form-control" } })
-            
-                <label asp-for="ImageFile"  class="control-label"></label>
+
+                    <label asp-for="ImageFile" class="control-label"></label>
                     <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
-                <span asp-validation-for="ImageFile"  class="text-danger"></span>
-               
-                @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+                    <span asp-validation-for="ImageFile" class="text-danger"></span>
+
+                    @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
                 </div>
                 <input type="submit" class="btn btn-success" id="input" value="Create Profil Doppelzylinder" />
                 <hr />
-            }  
-        </div> 
-      
+            }
+        </div>
+
     </div>
-   <div>
-        
+    <div>
+
         <h4 id="input">ALL Profil Doppelzylinder</h4>
         @using (Html.BeginForm("Index", "Home", FormMethod.Get))
         {
@@ -72,19 +72,19 @@
                 <tbody>
                     <tr id="Table">
                         <th>Name</th>
-                        <th >Image</th>
+                        <th>Image</th>
                         <th>Cost</th>
                         <th>Artikelnummer</th>
-                        <th >Intern</th>
-                        <th >Extern</th>
-                        <th >min</th>
-                        <th >max</th>
-                        <th >Edit</th>
+                        <th>Intern</th>
+                        <th>Extern</th>
+                        <th>min</th>
+                        <th>max</th>
+                        <th>Edit</th>
                         <th>Options</th>
-                        <th >Delete</th>
+                        <th>Delete</th>
 
-                    @foreach (var item in ViewBag.item)
-                    {
+                        @foreach (var item in ViewBag.item)
+                        {
 
                             <td id="rowTable" class="table-info">@item.Name</td>
                             <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
@@ -96,12 +96,12 @@
                             <td id="rowTable" class="table-info">@item.max</td>
                             <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
                             <td id="rowTable" class="table-info">
-                            <a class="compItem" href="@Url.Action("DetailsProfil_Doppelzylinder","Home", new { item.Id })">
-                            <img src="@("/Image/options.png")" height="30" width="30" />
-                            </a>  
+                                <a class="compItem" href="@Url.Action("DetailsProfil_Doppelzylinder","Home", new { item.Id })">
+                                    <img src="@("/Image/options.png")" height="30" width="30" />
+                                </a>
                             </td>
                             <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
-                    }
+                        }
                     </tr>
                 </tbody>
             </table>
@@ -110,7 +110,7 @@
             <div id="dialogContent" class="modal-dialog">
             </div>
         </div>
-    </div> 
+    </div>
 </div>
 
 @section scripts
@@ -118,12 +118,10 @@
     <script type="text/javascript">
 
         let sum = document.querySelectorAll('#cost');
-        function interfaice() 
-        {
+        function interfaice() {
             sum.forEach((item) => {
-                if (String(item).length < 6) 
-                {
-                    item.innerHTML = item.innerHTML.slice(0, 5) +'€';
+                if (String(item).length < 6) {
+                    item.innerHTML = item.innerHTML.slice(0, 5) + '€';
                 }
 
                 if (String(item).length > 8) {
