--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -1,4 +1,4 @@
-﻿@model schliessanlagen_konfigurator.Models.Profil_Doppelzylinder;
+﻿@model schliessanlagen_konfigurator.Models.ProfilDopelZylinder.Profil_Doppelzylinder;
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,93 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Save">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="schliessanlagenId" class="control-label"></label>
-                <input asp-for="schliessanlagenId" class="form-control" />
-                <span asp-validation-for="schliessanlagenId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="companyName" class="control-label"></label>
-                <input asp-for="companyName" class="form-control" />
-                <span asp-validation-for="companyName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="description" class="control-label"></label>
-                <input asp-for="description" class="form-control" />
-                <span asp-validation-for="description" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Cost" class="control-label"></label>
-                <input asp-for="Cost" class="form-control" />
-                <span asp-validation-for="Cost" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Artikelnummer" class="control-label"></label>
-                <input asp-for="Artikelnummer" class="form-control" />
-               <span asp-validation-for="Artikelnummer" class="text-danger"></span> 
-            </div>
-             <div class="form-group">
-                <label asp-for="aussen" class="control-label"></label>
-                <input asp-for="aussen" class="form-control" />
-                <span asp-validation-for="aussen" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Intern" class="control-label"></label>
-                <input asp-for="Intern" class="form-control" />
-               <span asp-validation-for="Intern" class="text-danger"></span> 
-            </div>
-           <div class="form-group">
-                <label asp-for="minSizeIntern" class="control-label"></label>
-                <input asp-for="minSizeIntern" class="form-control" />
-                <span asp-validation-for=" minSizeIntern" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="maxSizeIntern" class="control-label"></label>
-                <input asp-for="maxSizeIntern" class="form-control" />
-                <span asp-validation-for="maxSizeIntern" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="minSizeAussen" class="control-label"></label>
-                <input asp-for="minSizeAussen" class="form-control" />
-                <span asp-validation-for=" minSizeAussen" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="maxSizeAussen" class="control-label"></label>
-                <input asp-for="maxSizeAussen" class="form-control" />
-                <span asp-validation-for="maxSizeAussen" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="ImageName" class="control-label"></label>
-                <input asp-for="ImageName" class="form-control" />
-                <span asp-validation-for="ImageName" class="text-danger"></span>
-            </div>
-
-            <label asp-for="ImageFile"  class="control-label"></label>
-            <br />
-            <input asp-for="ImageFile"  accept="image/*" />
-            <span asp-validation-for="ImageFile"  class="text-danger"></span>
-            <br />
-            @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
-            <hr />
-             <input type="submit" value="Save" class="btn btn-primary" />         
-        </form>          
+        
     </div>
     
 </div>
