--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model schliessanlagen_konfigurator.Models.Profil_Doppelzylinder;
+﻿@model schliessanlagen_konfigurator.Models.ProfilDopelZylinder.Profil_Doppelzylinder;
 @{
     ViewData["Title"] = "Profil Doppelzylinder";
 }
@@ -18,60 +18,102 @@
 
         <div>
             <h2>New Profil Doppelzylinder</h2>
-            @using (Html.BeginForm("Create_Profil_Doppelzylinder", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
-            {
-                <label>Zylinder Typen</label>
 
-                @Html.DropDownListFor(model => model.schliessanlagenId,
-                         new List<SelectListItem> {
-            new SelectListItem {  Value = "1",Text="Profil-Doppelzylinder" }
-            },
-                         new { @class = "form-select", @id = "select" })
-                <div id="createColum">
-
-                    <label>Name</label>
-                    @Html.EditorFor(m => m.Name, new { htmlAttributes = new { @class = "form-control", @id = "exampleFormControlTextarea1" } })
-
-                    <label>Company Name</label>
-                    @Html.EditorFor(m => m.companyName, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label>Name System</label>
-                    @Html.EditorFor(m => m.NameSystem, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label>Descriptions</label>
-                    @Html.EditorFor(m => m.description, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label> Artikelnummer</label>
-                    @Html.EditorFor(m => m.Artikelnummer, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label>Extern</label>
-                    @Html.EditorFor(m => m.aussen, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label>Intern</label>
-                    @Html.EditorFor(m => m.Intern, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label>MinIntern</label>
-                    @Html.EditorFor(m => m.minSizeIntern, new { htmlAttributes = new { @class = "form-control" } })
-                    <label>MinAussen</label>
-                    @Html.EditorFor(m => m.minSizeAussen, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label>MaxIntern</label>
-                    @Html.EditorFor(m => m.maxSizeIntern, new { htmlAttributes = new { @class = "form-control" } })
-                    <label>MaxAussen</label>
-                    @Html.EditorFor(m => m.maxSizeAussen, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label>Cost</label>
-                    @Html.EditorFor(m => m.Cost, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label asp-for="ImageFile" class="control-label"></label>
-                    <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
-                    <span asp-validation-for="ImageFile" class="text-danger"></span>
-
-                    @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+            <form asp-action="Create_Profil_Doppelzylinder" enctype="multipart/form-data" asp-controller="Home">
+           
+                 <div id="productMenu">
+                     <input style="display:none" asp-for="schliessanlagenId" class="form-control" type="text" value="1" />
+                    <div>
+                        <label asp-for="ImageFile" class="control-label"></label>
+                        <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
+                        <span asp-validation-for="ImageFile" class="text-danger"></span>
+                        @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+                    </div>
                 </div>
-                <input type="submit"  class="btn btn-success" id="input" value="Create Profil Doppelzylinder" />
-                <hr />
-            }
+
+                <div id="product_desciptions">
+
+                    <div style="margin-bottom: 50px;">
+                        <label>Name</label>
+                        <input asp-for="Name"  class="form-control" type="text" name="Name"/>
+                    </div>
+
+                    <div style="margin-bottom: 50px;">
+                        <label> Company Name</label>
+                        <input asp-for="companyName" class="form-control" type="text"/>
+                    </div>
+
+                    <div style="margin-bottom: 50px;">
+                        <label>Name System</label>
+                        <input asp-for="NameSystem" class="form-control" type="text"/>
+                    </div>
+
+                    <div style="margin-bottom: 50px;">
+                        <label>Descriptions</label>
+                        <textarea asp-for="description" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+
+                    <div style="margin-bottom: 50px;">
+                        <label> Artikelnummer</label>
+                        <input asp-for="Artikelnummer" class="form-control" type="text" name="Artikelnummer" />
+                    </div>
+
+                    <div style="margin-bottom: 50px;">
+                        <label>Cost</label>
+                        <input asp-for="Cost" class="form-control" />
+                    </div> 
+
+                    <h1>Aussen & Innen</h1>
+                    <div id="Aussen_Innen_ProfilDopel">
+
+                    <div id="AussenProfilDopel">
+                       <input type="number" placeholder="Aussen" step="0.01" name="aussen" />
+                        </div>
+
+                        <div id="InnenProfilDopel" >
+                            <input type="number" placeholder="innen" step="0.01" name="innen" />
+                        </div>
+                    </div>
+                    <input id="addAussen_Innen" type="button" value="+" />
+
+                    <h1>Options</h1>
+
+                     <div>
+                        <h2>NGF</h2>
+                        
+                        <label>Name</label>
+                        <input class="form-control" type="text" name="NGF" />
+
+                        <div>
+                            <p></p>
+                            <input name="postedFile" type="file" class="btn btn-success" accept="image/*" />
+                            <p></p>
+                        </div>
+
+                        <label>Descriptions</label>
+                        <input class="form-control" type="text" name="NGFDescriptions" />
+
+                        <h1>Value & Cost</h1>
+                        <div id="Aussen_Innen_ProfilDopel">
+
+                            <div id="valueNGF">
+                                <input type="text" placeholder="valueNGF" step="0.01" name="valueNGF" />
+                            </div>
+
+                            <div id="costNGF">
+                                <input type="number" placeholder="costNGF" step="0.01" name="costNGF" />
+                            </div>
+                        </div>
+                        <input id="addNGF" type="button" value="+" />
+
+                     </div>
+                   
+                </div>
+
+                <input type="submit" class="btn btn-success" id="input" value="Create Profil Doppelzylinder" />
+            </form>
+
+         
         </div>
 
     </div>
@@ -83,33 +125,26 @@
             <table class="table table-bordered">
                 <tbody>
                     <tr id="Table">
+                        <th>CompanyName</th>
+                        <th>Systeam</th>
                         <th>Name</th>
                         <th>Image</th>
                         <th>Cost</th>
                         <th>Artikelnummer</th>
-                        <th>Intern</th>
-                        <th>aussen</th>
-                        <th>minSizeIntern</th>
-                        <th>minSizeAussen</th>
-                        <th>maxSizeIntern</th>
-                        <th>maxSizeAussen</th>
+                    
                         <th>Edit</th>
                         <th>Options</th>
                         <th>Delete</th>
                     
                         @foreach (var item in ViewBag.item)
                         {
-                            
+                            <td id="rowTable" class="table-info">@item.companyName</td>
+                            <td id="rowTable" class="table-info">@item.NameSystem</td>
                             <td id="rowTable" class="table-info">@item.Name</td>
                             <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
                             <td id="rowTable " class="table-info"><h6 id="cost">@item.Cost</h6></td>
                             <td id="rowTable" class="table-info">@item.Artikelnummer</td>
-                            <td id="rowTable" class="table-info">@item.Intern</td>
-                            <td id="rowTable" class="table-info">@item.aussen</td>
-                            <td id="rowTable" class="table-info">@item.minSizeIntern</td>
-                            <td id="rowTable" class="table-info">@item.minSizeAussen</td>
-                            <td id="rowTable" class="table-info">@item.maxSizeIntern</td>
-                            <td id="rowTable" class="table-info">@item.maxSizeAussen </td>
+                            
 
                             <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
                             <td id="rowTable" class="table-info">
@@ -132,7 +167,44 @@
 {
     <script type="text/javascript">
 
+        let plusAussen_Innen = document.getElementById('addAussen_Innen');
+        let docInnen = document.getElementById('InnenProfilDopel');
+        let docAussen = document.getElementById('AussenProfilDopel');
         let sum = document.querySelectorAll('#cost');
+        let Aussen_Innen_ProfilDopel = document.getElementById('Aussen_Innen_ProfilDopel');
+        
+        let addNGF = document.getElementById('addNGF');
+        let costNGF = document.getElementById('costNGF');
+        let valueNGF = document.getElementById('valueNGF');
+
+        addNGF.addEventListener('click', () => {
+            let d = document.createElement('input');
+            d.setAttribute('name', 'costNGF');
+            d.setAttribute('placeholder', 'costNGF');
+
+            let x = document.createElement('input');
+            x.setAttribute('name', 'valueNGF');
+            x.setAttribute('placeholder', 'valueNGF');
+
+            costNGF.append(d);
+            valueNGF.append(x);
+
+        });
+
+        plusAussen_Innen.addEventListener('click', () => {
+            let d = document.createElement('input');
+            d.setAttribute('name', 'aussen');
+            d.setAttribute('placeholder', 'aussen');
+
+            let x = document.createElement('input');
+            x.setAttribute('name', 'innen');
+            x.setAttribute('placeholder', 'aussen');
+
+            docAussen.append(d);
+            docInnen.append(x);
+
+        });
+
         function interfaice() {
             sum.forEach((item) => {
                 if (String(item).length < 6) {
