--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -12,7 +12,6 @@
                 <button class="btn btn-danger"><a href="@Url.Action("HebelzylinderRout","Home")">Hebelzylinder</a></button>
                 <button class="btn btn-warning"><a href="@Url.Action("VorhangschlossRout","Home")">Vorhangschloss</a></button>
                 <button class="btn btn-info"><a href="@Url.Action("Aussenzylinder_RundzylinderRout","Home")">Aussenzylinder / Rundzylinder</a></button>
-          @*       <a href="@Url.Action("AdminConnect","Home")">ChekMail</a> *@
             </div>
         </div>
 
@@ -63,7 +62,7 @@
                         <input asp-for="Cost" class="form-control" />
                     </div> 
 
-                    <h1>Aussen & Innen</h1>
+                    <h1>Aussen & Innen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /></h1>
                     <div id="Aussen_Innen_ProfilDopel">
 
                     <div id="AussenProfilDopel">
@@ -74,15 +73,12 @@
                             <input type="number" placeholder="innen" step="0.01" name="innen" />
                         </div>
                     </div>
-                    <input id="addAussen_Innen" type="button" value="+" />
-
-                    <h1>Options</h1>
-
+                    <div id="productOptions">
                      <div>
-                        <h2>NGF</h2>
+                        <h1>Options</h1>
                         
                         <label>Name</label>
-                        <input class="form-control" type="text" name="NGF" />
+                            <input class="form-control" type="text" name="Options" />
 
                         <div>
                             <p></p>
@@ -93,7 +89,7 @@
                         <label>Descriptions</label>
                         <input class="form-control" type="text" name="NGFDescriptions" />
 
-                        <h1>Value & Cost</h1>
+                        <h1>Value & Cost  <input id="addNGF" type="button" class="btn btn-success" value="+" /></h1>
                         <div id="Aussen_Innen_ProfilDopel">
 
                             <div id="valueNGF">
@@ -104,10 +100,11 @@
                                 <input type="number" placeholder="costNGF" step="0.01" name="costNGF" />
                             </div>
                         </div>
-                        <input id="addNGF" type="button" value="+" />
-
                      </div>
-                   
+
+                    </div>
+
+                    <input id="addOptions" type="button" class="btn btn-success" value="Add Options" />
                 </div>
 
                 <input type="submit" class="btn btn-success" id="input" value="Create Profil Doppelzylinder" />
@@ -176,6 +173,61 @@
         let addNGF = document.getElementById('addNGF');
         let costNGF = document.getElementById('costNGF');
         let valueNGF = document.getElementById('valueNGF');
+
+        let productOptions = document.getElementById('productOptions');
+        let addOptions = document.getElementById('addOptions');
+
+
+        addOptions.addEventListener('click', () => {
+
+            let html = `<div>
+                                <h1>Options</h1>
+
+                                <label>Name</label>
+                                        <input class="form-control" type="text" name="Options" />
+
+                                <div>
+                                    <p></p>
+                                    <input name="postedFile" type="file" class="btn btn-success"  />
+                                    <p></p>
+                                </div>
+
+                                <label>Descriptions</label>
+                                <input class="form-control" type="text" name="NGFDescriptions" />
+
+                                <h1>Value & Cost  <input id="addNGF" type="button" class="btn btn-success" value="+" /></h1>
+                                <div id="Aussen_Innen_ProfilDopel">
+
+                                    <div id="valueNGF">
+                                        <input type="text" placeholder="valueNGF" step="0.01" name="valueNGF" />
+                                    </div>
+
+                                    <div id="costNGF">
+                                        <input type="number" placeholder="costNGF" step="0.01" name="costNGF" />
+                                    </div>
+                                </div>
+                             </div>`;
+            
+             addNGF.addEventListener('click', () => {
+                let d = document.createElement('input');
+                d.setAttribute('name', 'costNGF');
+                d.setAttribute('placeholder', 'costNGF');
+
+                let x = document.createElement('input');
+                x.setAttribute('name', 'valueNGF');
+                x.setAttribute('placeholder', 'valueNGF');
+
+                costNGF.append(d);
+                valueNGF.append(x);
+
+            });
+            productOptions.insertAdjacentHTML("afterend", html);
+
+        });
+
+       
+
+
 
         addNGF.addEventListener('click', () => {
             let d = document.createElement('input');
