--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Http;
 ﻿@using System.Text.RegularExpressions;
 @{
-    ViewData["Title"] = $"System_Auswählen";
+    ViewData["Title"] = $"System_Auswählen/{Model.userKey}";
 }
 @Html.HiddenFor(m => m.userKey)
 
