--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_HalbzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_HalbzylinderRout.cshtml
@@ -1,4 +1,4 @@
-﻿@model schliessanlagen_konfigurator.Models.Profil_Halbzylinder;
+﻿@model schliessanlagen_konfigurator.Models.Halbzylinder.Profil_Halbzylinder;
 @{
     ViewData["Title"] = "Profil Halbzylinder";
 }
@@ -37,14 +37,7 @@
                     <label> Artikelnummer</label>
                     @Html.EditorFor(m => m.Artikelnummer, new { htmlAttributes = new { @class = "form-control" } })
                     <label>Außen</label>
-                    @Html.EditorFor(m => m.Außen, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label>Count</label>
-                    @Html.EditorFor(m => m.Count, new { htmlAttributes = new { @class = "form-control" } })
-                    <label>Min</label>
-                    @Html.EditorFor(m => m.min, new { htmlAttributes = new { @class = "form-control" } })
-                    <label>Max</label>
-                    @Html.EditorFor(m => m.max, new { htmlAttributes = new { @class = "form-control" } })
+                   
 
                     <label asp-for="ImageFile" class="control-label"></label>
                     <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
@@ -68,9 +61,7 @@
                     <th>Image</th>
                     <th>Cost</th>
                     <th>Artikelnummer</th>
-                    <th>Außen</th>
-                    <th>min</th>
-                    <th>max</th>
+                   
                     <th>Edit</th>
                     <th>Options</th>
                     <th>Delete</th>
@@ -83,9 +74,7 @@
                         <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
                         <td id="rowTable" class="table-info"><h6 id="cost">@item.Cost</h6></td>
                         <td id="rowTable" class="table-info">@item.Artikelnummer</td>
-                        <td id="rowTable" class="table-info">@item.Außen</td>
-                        <td id="rowTable" class="table-info">@item.min</td>
-                        <td id="rowTable" class="table-info">@item.max</td>
+               
                         <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Profil_Halbzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
                         <td id="rowTable" class="table-info">
                             <a class="compItem" href="@Url.Action("DetailsProfil_Halbzylinder","Home", new { item.Id })">
