--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -74,33 +74,7 @@
                         </div>
                     </div>
                     <div id="productOptions">
-                     <div>
-                        <h1>Options</h1>
-                        
-                        <label>Name</label>
-                            <input class="form-control" type="text" name="Options" />
-
-                        <div>
-                            <p></p>
-                            <input name="postedFile" type="file" class="btn btn-success" accept="image/*" />
-                            <p></p>
-                        </div>
-
-                        <label>Descriptions</label>
-                        <input class="form-control" type="text" name="NGFDescriptions" />
-
-                        <h1>Value & Cost  <input id="addNGF" type="button" class="btn btn-success" value="+" /></h1>
-                        <div id="Aussen_Innen_ProfilDopel">
-
-                            <div id="valueNGF">
-                                <input type="text" placeholder="valueNGF" step="0.01" name="valueNGF" />
-                            </div>
-
-                            <div id="costNGF">
-                                <input type="number" placeholder="costNGF" step="0.01" name="costNGF" />
-                            </div>
-                        </div>
-                     </div>
+                   
 
                     </div>
 
@@ -110,7 +84,9 @@
                 <input type="submit" class="btn btn-success" id="input" value="Create Profil Doppelzylinder" />
             </form>
 
-         
+            <button id="createBlockBtn" class="btn btn-success">Add Options</button>
+            <button id="addInputBtn" class="btn btn-success">+</button>
+            @* <div id="container"></div> *@
         </div>
 
     </div>
@@ -169,8 +145,7 @@
         let docAussen = document.getElementById('AussenProfilDopel');
         let sum = document.querySelectorAll('#cost');
         let Aussen_Innen_ProfilDopel = document.getElementById('Aussen_Innen_ProfilDopel');
-        
-        let addNGF = document.getElementById('addNGF');
+
         let costNGF = document.getElementById('costNGF');
         let valueNGF = document.getElementById('valueNGF');
 
@@ -178,37 +153,63 @@
         let addOptions = document.getElementById('addOptions');
 
 
-        addOptions.addEventListener('click', () => {
+        document.addEventListener("DOMContentLoaded", function () {
+            const container = document.getElementById('productOptions');
+            const createBlockBtn = document.getElementById('createBlockBtn');
+            const addInputBtn = document.getElementById('addInputBtn');
+            let blockCounter = 1;
 
-            let html = `<div>
-                                <h1>Options</h1>
+            createBlockBtn.addEventListener('click', function () {
+                const block = createBlock();
+                container.appendChild(block);
+            });
 
-                                <label>Name</label>
-                                        <input class="form-control" type="text" name="Options" />
+            addInputBtn.addEventListener('click', function () {
+                const blocks = document.querySelectorAll('.input-block');
+                const lastBlock = blocks[blocks.length - 1];
+                if (lastBlock) {
+                    addInputs(lastBlock);
+                } else {
+                    alert('Сначала создайте блок');
+                }
+            });
 
-                                <div>
-                                    <p></p>
-                                    <input name="postedFile" type="file" class="btn btn-success"  />
-                                    <p></p>
-                                </div>
+            function createBlock() {
+                const block = document.createElement('div');
+                block.classList.add('input-block');
+                block.id = `block-${blockCounter}`;
+                block.innerHTML = `<div >
+                                        <h1>Options</h1>
 
-                                <label>Descriptions</label>
-                                <input class="form-control" type="text" name="NGFDescriptions" />
+                                        <label>Name</label>
+                                           <input class="form-control" type="text" name="Options" />
 
-                                <h1>Value & Cost  <input id="addNGF" type="button" class="btn btn-success" value="+" /></h1>
-                                <div id="Aussen_Innen_ProfilDopel">
+                                        <div>
+                                            <p></p>
+                                            <input name="postedFile" type="file" class="btn btn-success"  />
+                                            <p></p>
+                                        </div>
 
-                                    <div id="valueNGF">
-                                        <input type="text" placeholder="valueNGF" step="0.01" name="valueNGF" />
-                                    </div>
+                                        <label>Descriptions</label>
+                                                <input class="form-control" type="text" name="NGFDescriptions " />
 
-                                    <div id="costNGF">
-                                        <input type="number" placeholder="costNGF" step="0.01" name="costNGF" />
-                                    </div>
-                                </div>
-                             </div>`;
-            
-             addNGF.addEventListener('click', () => {
+                                                <h1>Value & Cost </h1>
+                                        <div id="Aussen_Innen_ProfilDopel">
+
+                                            <div id="valueNGF">
+                                                <input type="text" placeholder="valueNGF" step="0.01" name="valueNGF" />
+                                            </div>
+
+                                            <div id="costNGF">
+                                                <input type="number" placeholder="costNGF" step="0.01" name="costNGF" />
+                                            </div>
+                                        </div>
+                                     </div>`;
+                blockCounter++;
+                return block;
+            }
+
+            function addInputs(block) {
                 let d = document.createElement('input');
                 d.setAttribute('name', 'costNGF');
                 d.setAttribute('placeholder', 'costNGF');
@@ -217,31 +218,14 @@
                 x.setAttribute('name', 'valueNGF');
                 x.setAttribute('placeholder', 'valueNGF');
 
-                costNGF.append(d);
-                valueNGF.append(x);
+                const div1 = block.querySelector('#valueNGF');
+                const div2 = block.querySelector('#costNGF');
 
-            });
-            productOptions.insertAdjacentHTML("afterend", html);
-
+                div1.appendChild(d);
+                div2.appendChild(x);
+            }
         });
 
-       
-
-
-
-        addNGF.addEventListener('click', () => {
-            let d = document.createElement('input');
-            d.setAttribute('name', 'costNGF');
-            d.setAttribute('placeholder', 'costNGF');
-
-            let x = document.createElement('input');
-            x.setAttribute('name', 'valueNGF');
-            x.setAttribute('placeholder', 'valueNGF');
-
-            costNGF.append(d);
-            valueNGF.append(x);
-
-        });
 
         plusAussen_Innen.addEventListener('click', () => {
             let d = document.createElement('input');
