--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
 
                 <div id="product_desciptions">
 
-                    <div style="margin-bottom: 50px;">
+                     <div style="margin-bottom: 50px;">
                         <label>Name</label>
                         <input asp-for="Name"  class="form-control" type="text" name="Name"/>
                     </div>
@@ -72,13 +72,12 @@
                         <div id="InnenProfilDopel" >
                             <input type="number" placeholder="innen" step="0.01" name="innen" />
                         </div>
-                    </div>
+                    </div> 
                     <div id="productOptions">
                    
 
                     </div>
 
-                    <input id="addOptions" type="button" class="btn btn-success" value="Add Options" />
                 </div>
 
                 <input type="submit" class="btn btn-success" id="input" value="Create Profil Doppelzylinder" />
@@ -167,6 +166,7 @@
             addInputBtn.addEventListener('click', function () {
                 const blocks = document.querySelectorAll('.input-block');
                 const lastBlock = blocks[blocks.length - 1];
+
                 if (lastBlock) {
                     addInputs(lastBlock);
                 } else {
@@ -178,33 +178,29 @@
                 const block = document.createElement('div');
                 block.classList.add('input-block');
                 block.id = `block-${blockCounter}`;
-                block.innerHTML = `<div >
+                block.innerHTML = `<div>
                                         <h1>Options</h1>
-
                                         <label>Name</label>
-                                           <input class="form-control" type="text" name="Options" />
-
+                                        <input class="form-control" type="text" name="Options" />
                                         <div>
                                             <p></p>
-                                            <input name="postedFile" type="file" class="btn btn-success"  />
+                                            <input name="postedFile" type="file" class="btn btn-success" />
                                             <p></p>
                                         </div>
-
                                         <label>Descriptions</label>
-                                                <input class="form-control" type="text" name="NGFDescriptions " />
-
-                                                <h1>Value & Cost </h1>
+                                        <input class="form-control" type="text" name="NGFDescriptions" />
+                                        <h1>Value & Cost </h1>
                                         <div id="Aussen_Innen_ProfilDopel">
-
                                             <div id="valueNGF">
                                                 <input type="text" placeholder="valueNGF" step="0.01" name="valueNGF" />
+                                                <span class="input-counter">0</span>
                                             </div>
-
                                             <div id="costNGF">
-                                                <input type="number" placeholder="costNGF" step="0.01" name="costNGF" />
+                                                <input type="number" id='cost' placeholder="costNGF" step="0.01" name="costNGF" />
                                             </div>
+                                        
                                         </div>
-                                     </div>`;
+                                    </div>`;
                 blockCounter++;
                 return block;
             }
@@ -221,8 +217,27 @@
                 const div1 = block.querySelector('#valueNGF');
                 const div2 = block.querySelector('#costNGF');
 
-                div1.appendChild(d);
-                div2.appendChild(x);
+                div1.appendChild(x);
+
+                // Создаем счетчик и добавляем его рядом с инпутом
+                const counterSpan = document.createElement('input');
+                counterSpan.value = '0';
+                counterSpan.classList.add('input-counter');
+                counterSpan.setAttribute('name', 'input_counter');
+                div1.appendChild(counterSpan);
+
+                div2.appendChild(d);
+
+                // Обновляем счетчик инпутов
+                updateInputCounter(block);
+            }
+
+            function updateInputCounter(block) {
+                const inputCounter = block.querySelectorAll('.input-counter').length;
+                const counters = block.querySelectorAll('.input-counter');
+                counters.forEach(counter => {
+                    counter.value = inputCounter;
+                });
             }
         });
 
