--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -249,7 +249,7 @@
 
             let x = document.createElement('input');
             x.setAttribute('name', 'innen');
-            x.setAttribute('placeholder', 'aussen');
+            x.setAttribute('placeholder', 'innen');
 
             docAussen.append(d);
             docInnen.append(x);
