--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
@@ -15,85 +15,242 @@
         </div>
         <div>
             <h2>New Profil Knaufzylinder</h2>
-            @using (Html.BeginForm("Create_Profil_Knaufzylinder", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
-            {
-                <label>Zylinder Typen</label>
 
-                @Html.DropDownListFor(model => model.schliessanlagenId,
-                         new List<SelectListItem> {
-            new SelectListItem {  Value = "3",Text="Profil-Knaufzylinder" }
-            },
-                         new { @class = " form-select", @id = "select" })
+            <form asp-action="Create_Profil_Knaufzylinder" enctype="multipart/form-data" asp-controller="Home">
 
-                <div id="createColum">
-                    <label> Name</label>
-                    @Html.EditorFor(m => m.Name, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label>Cost</label>
-                    @Html.EditorFor(m => m.Cost, new { htmlAttributes = new { @class = "form-control" } })
-
-                    <label> Artikelnummer</label>
-                    @Html.EditorFor(m => m.Artikelnummer, new { htmlAttributes = new { @class = "form-control" } })
-
-                 
-
-                    <label asp-for="ImageFile" class="control-label"></label>
-                    <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
-                    <span asp-validation-for="ImageFile" class="text-danger"></span>
-                    @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+                <div id="productMenu">
+                    <input style="display:none" asp-for="schliessanlagenId" class="form-control" type="text" value="3" />
+                    <div>
+                        <label asp-for="ImageFile" class="control-label"></label>
+                        <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
+                        <span asp-validation-for="ImageFile" class="text-danger"></span>
+                        @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+                    </div>
                 </div>
-                <input type="submit" class="btn btn-success" id="input" value="Create Profil Knaufzylinder" />
-                <hr />
-            }
+
+                <div id="product_desciptions">
+
+                    <div style="margin-bottom: 50px;">
+                        <label>Name</label>
+                        <input asp-for="Name" class="form-control" type="text" name="Name" />
+                    </div>
+
+                    <div style="margin-bottom: 50px;">
+                        <label> Company Name</label>
+                        <input asp-for="companyName" class="form-control" type="text" />
+                    </div>
+
+                    <div style="margin-bottom: 50px;">
+                        <label>Name System</label>
+                        <input asp-for="NameSystem" class="form-control" type="text" />
+                    </div>
+
+                    <div style="margin-bottom: 50px;">
+                        <label>Descriptions</label>
+                        <textarea asp-for="description" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+
+                    <div style="margin-bottom: 50px;">
+                        <label> Artikelnummer</label>
+                        <input asp-for="Artikelnummer" class="form-control" type="text" name="Artikelnummer" />
+                    </div>
+
+                    <div style="margin-bottom: 50px;">
+                        <label>Cost</label>
+                        <input asp-for="Cost" class="form-control" />
+                    </div>
+
+                    <h1>Aussen & Innen <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /></h1>
+                    <div id="Aussen_Innen_ProfilDopel">
+
+                        <div id="AussenProfilDopel">
+                            <input type="number" placeholder="Aussen" step="0.01" name="aussen" />
+                        </div>
+
+                        <div id="InnenProfilDopel">
+                            <input type="number" placeholder="innen" step="0.01" name="innen" />
+                        </div>
+                    </div>
+                    <div id="productOptions">
+                    </div>
+
+                </div>
+
+                <input type="submit" class="btn btn-success" id="input" value="Create Profil Kanufzylinder" />
+            </form>
+
+            <button id="createBlockBtn" class="btn btn-success">Add Options</button>
+            <button id="addInputBtn" class="btn btn-success">+</button>
         </div>
+
     </div>
     <div>
 
-        @using (Html.BeginForm("IndexProfil_Knaufzylinder", "Home", FormMethod.Get))
+        <h4 id="input">ALL Profil Knaufzylinder</h4>
+        @using (Html.BeginForm("Profil_KnaufzylinderRout", "Home", FormMethod.Get))
         {
             <table class="table table-bordered">
-                <tr id="Table">
-                    <th>CompanyName</th>
-                    <th>Systeam</th>
-                    <th>Name</th>
-                    <th>Image</th>
-                    <th>Cost</th>
-                    <th>Artikelnummer</th>
+                <tbody>
+                    <tr id="Table">
+                        <th>CompanyName</th>
+                        <th>Systeam</th>
+                        <th>Name</th>
+                        <th>Image</th>
+                        <th>Cost</th>
+                        <th>Artikelnummer</th>
 
-                    <th>Edit</th>
-                    <th>Options</th>
-                    <th>Delete</th>
+                        <th>Edit</th>
+                        <th>Options</th>
+                        <th>Delete</th>
 
-                    @foreach (var item in ViewBag.item)
-                    {
-                        <td id="rowTable" class="table-info">@item.companyName</td>
-                        <td id="rowTable" class="table-info">@item.NameSystem</td>
-                        <td id="rowTable" class="table-info">@item.Name</td>
-                        <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
-                        <td id="rowTable " class="table-info"><h6 id="cost">@item.Cost</h6></td>
-                        <td id="rowTable" class="table-info">@item.Artikelnummer</td>
-                    
-                        <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Profil_Knaufzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
-                        <td id="rowTable" class="table-info">
-                            <a class="compItem" href="@Url.Action("DetailsProfil_Knaufzylinder","Home", new { item.Id })">
-                                <img src="@("/Image/options.png")" height="30" width="30" />
-                            </a>
-                        </td>
-                        <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
-                    }
-                </tr>
+                        @foreach (var item in ViewBag.item)
+                        {
+                            <td id="rowTable" class="table-info">@item.companyName</td>
+                            <td id="rowTable" class="table-info">@item.NameSystem</td>
+                            <td id="rowTable" class="table-info">@item.Name</td>
+                            <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
+                            <td id="rowTable " class="table-info"><h6 id="cost">@item.Cost</h6></td>
+                            <td id="rowTable" class="table-info">@item.Artikelnummer</td>
+
+
+                            <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
+                            <td id="rowTable" class="table-info">
+                                <a class="compItem" href="@Url.Action("ProductProfil_Doppelzylinder","Home", new { item.Id })">
+                                    <img src="@("/Image/options.png")" height="30" width="30" />
+                                </a>
+                            </td>
+                            <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
+                        }
+
+                    </tr>
+                </tbody>
             </table>
         }
-        <div id="modDialog" class="modal fade">
-            <div id="dialogContent" class="modal-dialog">
-            </div>
-        </div>
+
     </div>
 </div>
+
 @section scripts
 {
     <script type="text/javascript">
+
+        let plusAussen_Innen = document.getElementById('addAussen_Innen');
+        let docInnen = document.getElementById('InnenProfilDopel');
+        let docAussen = document.getElementById('AussenProfilDopel');
         let sum = document.querySelectorAll('#cost');
+        let Aussen_Innen_ProfilDopel = document.getElementById('Aussen_Innen_ProfilDopel');
+
+        let costNGF = document.getElementById('costNGF');
+        let valueNGF = document.getElementById('valueNGF');
+
+        let productOptions = document.getElementById('productOptions');
+        let addOptions = document.getElementById('addOptions');
+
+
+        document.addEventListener("DOMContentLoaded", function () {
+            const container = document.getElementById('productOptions');
+            const createBlockBtn = document.getElementById('createBlockBtn');
+            const addInputBtn = document.getElementById('addInputBtn');
+            let blockCounter = 1;
+
+            createBlockBtn.addEventListener('click', function () {
+                const block = createBlock();
+                container.appendChild(block);
+            });
+
+            addInputBtn.addEventListener('click', function () {
+                const blocks = document.querySelectorAll('.input-block');
+                const lastBlock = blocks[blocks.length - 1];
+
+                if (lastBlock) {
+                    addInputs(lastBlock);
+                } else {
+                    alert('Сначала создайте блок');
+                }
+            });
+
+            function createBlock() {
+                const block = document.createElement('div');
+                block.classList.add('input-block');
+                block.id = `block-${blockCounter}`;
+                block.innerHTML = `<div>
+                                                <h1>Options</h1>
+                                                <label>Name</label>
+                                                <input class="form-control" type="text" name="Options" />
+                                                <div>
+                                                    <p></p>
+                                                    <input name="postedFile" type="file" class="btn btn-success" />
+                                                    <p></p>
+                                                </div>
+                                                <label>Descriptions</label>
+                                                <input class="form-control" type="text" name="NGFDescriptions" />
+                                                <h1>Value & Cost </h1>
+                                                <div id="Aussen_Innen_ProfilDopel">
+                                                    <div id="valueNGF">
+                                                        <input type="text" placeholder="valueNGF" step="0.01" name="valueNGF" />
+                                                        <span class="input-counter">0</span>
+                                                    </div>
+                                                    <div id="costNGF">
+                                                        <input type="number" id='cost' placeholder="costNGF" step="0.01" name="costNGF" />
+                                                    </div>
+
+                                                </div>
+                                            </div>`;
+                blockCounter++;
+                return block;
+            }
+
+            function addInputs(block) {
+                let d = document.createElement('input');
+                d.setAttribute('name', 'costNGF');
+                d.setAttribute('placeholder', 'costNGF');
+
+                let x = document.createElement('input');
+                x.setAttribute('name', 'valueNGF');
+                x.setAttribute('placeholder', 'valueNGF');
+
+                const div1 = block.querySelector('#valueNGF');
+                const div2 = block.querySelector('#costNGF');
+
+                div1.appendChild(x);
+
+                // Создаем счетчик и добавляем его рядом с инпутом
+                const counterSpan = document.createElement('input');
+                counterSpan.value = '0';
+                counterSpan.classList.add('input-counter');
+                counterSpan.setAttribute('name', 'input_counter');
+                div1.appendChild(counterSpan);
+
+                div2.appendChild(d);
+
+                // Обновляем счетчик инпутов
+                updateInputCounter(block);
+            }
+
+            function updateInputCounter(block) {
+                const inputCounter = block.querySelectorAll('.input-counter').length;
+                const counters = block.querySelectorAll('.input-counter');
+                counters.forEach(counter => {
+                    counter.value = inputCounter;
+                });
+            }
+        });
+
+
+        plusAussen_Innen.addEventListener('click', () => {
+            let d = document.createElement('input');
+            d.setAttribute('name', 'aussen');
+            d.setAttribute('placeholder', 'aussen');
+
+            let x = document.createElement('input');
+            x.setAttribute('name', 'innen');
+            x.setAttribute('placeholder', 'innen');
+
+            docAussen.append(d);
+            docInnen.append(x);
+
+        });
+
         function interfaice() {
             sum.forEach((item) => {
                 if (String(item).length < 6) {
@@ -104,21 +261,10 @@
                     item.innerHTML = item.innerHTML.slice(0, 6) + '€';
                 }
 
-                console.log(String(item).length);
             })
         }
         interfaice();
 
-        $(function () {
-            $.ajaxSetup({ cache: false });
-            $(".compItem").click(function (e) {
 
-                e.preventDefault();
-                $.get(this.href, function (data) {
-                    $('#dialogContent').html(data);
-                    $('#modDialog').modal('show');
-                });
-            });
-        })
     </script>
 }
